istio/twittify-elastisearch.yaml
apiVersion: v1
kind: Service
metadata:
  name: twittify-elasticsearch
  labels:
    app: twittify-elasticsearch
    service: twittify-elasticsearch
spec:
  ports:
    - port: 9200
      name: http
  selector:
    app: twittify-elasticsearch
---
apiVersion: apps/v1
kind: Deployment
metadata:
  # Unique key of the Deployment instance
  name: twittify-elasticsearch
  labels:
    app: twittify-elasticsearch
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: twittify-elasticsearch
      version: v1
  template:
    metadata:
      labels:
        # Apply this label to pods and default
        # the Deployment label selector to this value
        app: twittify-elasticsearch
        version: v1
    spec:
      containers:
        - name: twittify-elasticsearch
          # Run this image
          image: docker.elastic.co/elasticsearch/elasticsearch:7.10.1
          ports:
            - containerPort: 9200
