istio/twittify-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: twittify-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: twittify
spec:
  hosts:
  - "*"
  gateways:
  - twittify-gateway
  http:
  - match:
    - uri:
        prefix: /client/
    - uri:
        prefix: /client
    route:
    - destination:
        host: twittify-client
        port:
          number: 8080
  - match:
    - uri:
        prefix: /api/
    - uri:
        prefix: /api
    route:
    - destination:
        host: twittify-clusterizer
        port:
          number: 8787
